--- a/client/src/styles/components/_app.scss
+++ b/client/src/styles/components/_app.scss
@@ -1,24 +1,66 @@
+.container {
+	display: block;
+	margin: autoY;
+}
+
 .table {
 	table-layout: fixed;
 	border-collapse: collapse;
+	width: 333px;
+	height: 539px;
+}
+
+.display {
+	width: 320px;
+	height: 120px;
+	font-size: 4vw;
+	font-weight: 100;
+	text-align: right;
+}
+
+.td {
+	text-align: center;
+	width: 80px;
+	height: 80px;
+}
+
+button {
+	background-color: Transparent;
+	border: none;
+	display: block;
+	width: 100%;
+	height: 100%;
+	font-size: 2vw;
+	font-weight: 100;
+}
+
+button:active {
+background: radial-gradient(transparent, rgba(0, 0, 0, 0.25));
 }
 
 .td__light-grey {
-	background: #e0e0e7;
+	background-color: #e0e0e7;
 }
 
 .td__grey {
-	background: #c8c7cc;
+	background-color: #c8c7cc;
 }
 
 .td__dark-grey {
-	background: #1c191c;
+	background-color: #1c191c;
 	color: white;
 }
 
 .td__orange {
-	background: #fa9417;
+	background-color: #fa9417;
 	color: white;
+}
+
+.td__zero {
+	button {
+		text-align: left;
+		padding-left: 32px;
+	}
 }
 
 //border = #474747
