final push before deploying

--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -4,5 +4,6 @@ html {
 
 body {
 	font-family: Helvetica, Arial, sans-serif;
-
+	//font-family: 'Lato', 'Lucida Grande', 'Lucida Sans Unicode', Tahoma, Sans-Serif;
+	font-size: 1.6rem;
 }
